<resources>
    <string name="app_name">Swably</string>
    <string name="app_name_debug">Swably(debug)</string>
    <string name="next">Next</string>
    <string name="share">Share</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading...</string>
    <string name="refreshing_app_status">Refreshing app status...</string>
    <string name="upload">Upload</string>
    <string name="uploading">Uploading...</string>
    <string name="uploaded">Uploaded. Tap to review.</string>
    <string name="downloading_app">Downloading %s ...</string>
    <string name="app_downloaded">%s downloaded</string>
    <string name="downloaded">Downloaded. Tap to install it</string>
    <string name="install">Install</string>
    <string name="done">Done</string>
    <string name="err_no_SD">Can\'t access SD card. To continue, make sure your SD card is ready.</string>
    <string name="err_load_failed">Can not refresh at this time, please try again later</string>
    <string name="err_no_network_title">Network not available</string>
    <string name="err_no_network_message">Please make sure your Wi-Fi or Mobile networks is enabled.</string>
    <string name="err_upload_failed">Upload failed</string>
    <string name="err_upload_canceled">Upload canceled</string>
    <string name="err_download_failed">Download failed</string>
    <string name="err_download_canceled">Download canceled</string>
    <string name="err_failed">Failed</string>
    <string name="err_saving_failed">Saving failed, please try again later</string>
    <string name="share_via_email_title">Get App from Swably</string>
    <string name="tell_friends_via">Send to</string>
    <string name="send">Send</string>
    <string name="sending">Sending...</string>
    <string name="retry">Retry</string>
    <string name="more">More</string>
    <string name="confirm_prompt">Are you sure?</string>
    <string name="ok">Ok</string>
    <string name="settings">Settings</string>
    <string name="dist_seconds">%d sec</string>
    <string name="dist_minutes">%d min</string>
    <string name="dist_hours">%d hour</string>
    <string name="dist_days">%d day</string>
    <string name="dist_weeks">%d week</string>
    <string name="date_format">MMM d</string>
    <string name="a_second">1 second</string>
    <string name="a_minute">1 minute</string>
    <string name="a_hour">1 hour</string>
    <string name="span_seconds">%d seconds</string>
    <string name="span_minutes">%d minutes</string>
    <string name="span_hours">%d hours</string>
    <string name="upgrade">Upgrade now!</string>
    <string name="about">About</string>
    <string name="version_name" formatted="false">version %s</string>
    <string name="version_size" formatted="false">version %s, size %.2fMB</string>
    <string name="up2date">Your Swably is up to date</string>
    <string name="not_up2date">New version %s is available! Check the recent changes: </string>
    <string name="cloud_update">Swably Update</string>
    <string name="checking_update">Checking update...</string>
    <string name="notification">Notification</string>
    <string name="notification_cap">NOTIFICATION</string>
    <string name="notification_desc">Get notice when there are new updates related to you</string>
    <string name="app_version">version %s</string>
    <string name="app_version_short">v %s</string>
    <string name="app_size">Size %.2fMB</string>
    <string name="app_size_short">%.2fMB</string>
    <string name="app_updated_on">updated on %s</string>
    <string name="reviews_count">%d Posts</string>
    <string name="likes_count">%d hearts</string>
    <string name="uploads_count">%d Uploads</string>
    <string name="not_in_cloud">%s is not posted on Swably yet. Upload it to review, now?</string>
    <string name="terms_short">Please do NOT upload PAID apps unless you are the developer.</string>
    <string name="uploading_queued">Waiting for uploading...</string>
    <string name="size_sent" formatted="false">%d%%, %dKB sent</string>
    <string name="terms_underline"><u>Terms of Service</u></string>
    <string name="terms_title">TERMS</string>
    <string name="terms_content">	    You agree to share only free apps. No paid allowed.
	    \n
	    \nYou understand that Swably is completely safe, but not any app shared on it is safe as well. You are advised to download apps only from people you trust. In case of damages occur to your device by apps you download from Swably, the Swably team shall not be held responsible.
	    \n
	    \nIf you are a developer and do not wish your apps to be shared on Swably, you can log in Swably and claim your app. Once that be done, you can disable its downloading. </string>
    <string name="terms_yes">I agree</string>
    <string name="terms_no">Decline</string>
    <string name="select_account">SIGN IN WITH</string>
    <string name="sign_out">Sign out</string>
    <string name="pick_app">CHOOSE AN APP</string>
    <string name="pick_app_to_review">Pick an app to review</string>
    <string name="add_review">+ Review</string>
    <string name="no_review_for_app">Oops, no review for %s yet.\nBe the first one to review it!</string>
    <string name="downloading_queued">Waiting for downloading...</string>
    <string name="size_received" formatted="false">%d%%, %dKB received</string>
    <string name="transfer_progress" formatted="false">%dKB/s, %s left</string>
    <string name="caching">Listing your apps</string>
    <string name="caching_progress" formatted="false">%d/%d apps listed</string>
    <string name="follow">Follow</string>
    <string name="follow_all">Follow all</string>
    <string name="review">Review</string>
    <string name="comments">Reviews</string>
    <string name="me">Me</string>
    <string name="public_reviews">Everyone</string>
    <string name="post_review_hint">Write your review here, not more than 120 characters</string>
    <string name="err_no_app">Please pick an app</string>
    <string name="err_post_failed">Post failed</string>
    <string name="err_post_failed_desc">Post failed, tap to try again.</string>
    <string name="home">Home</string>
    <string name="my_reviews">My Reviews</string>
    <string name="reviews">Reviews</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="apps">Apps</string>
    <string name="local_apps">Apps</string>
    <string name="following_count">%d following</string>
    <string name="followers_count">%d followers</string>
    <string name="follow_prompt">You are following this person</string>
    <string name="unfollow_prompt">You are not following this person</string>
    <string name="sending_request">Sending request...</string>
    <string name="reply">Reply</string>
    <string name="delete_review">Delete review</string>
    <string name="invites_count">%d invites</string>
    <string name="invite_subject">Swably</string>
    <string name="invitation">Invitation</string>
    <string name="invite_request">Hey there, I am using Swably to post Android apps. Come on and follow me</string>
    <string name="friends">Friends</string>
    <string name="following_reviews">Following</string>
    <string name="friends_on">Friends on %s</string>
    <string name="friends_on_swably">Your friends</string>
    <string name="zero_friend">Oops, seems you don\'t have known friends on Swably.</string>
    <string name="contacts">Contacts</string>
    <string name="new_reviews_count">%d new reviews</string>
    <string name="new_follows_count">%d new followers</string>
    <string name="following_noti_title">%s is following you</string>
    <string name="invite">Invite</string>
    <string name="invite_friends">Invite friends</string>
    <string name="invited">Invited</string>
    <string name="invites_left">You have %d invites left</string>
    <string name="send_invite_to">Send invite to</string>
    <string name="installed_apps">Installed</string>
    <string name="claimed">Claimed</string>
    <string name="claimed_count">%d claimed</string>
    <string name="people">People</string>
    <string name="starred_count">%d starred</string>
    <string name="a_review">POST</string>
    <string name="add_a_review">Add a review</string>
    <string name="version">Version</string>
    <string name="version_cap">VERSION</string>
    <string name="account_cap">ACCOUNT</string>
    <string name="uninstall_app">Uninstall the App</string>
    <string name="claim">Claim</string>
    <string name="claiming_title">Claiming</string>
    <string name="claiming_prompt">Congrats, %s, you have verified the signature of the following app(s). Now you can claim them. </string>
    <string name="developer_cap">DEVELOPER</string>
    <string name="not_claimed">not claimed yet</string>
    <string name="claim_prompt">Is this your app?</string>
    <string name="claim_btn">Claim the app</string>
    <string name="renounce_title">Renounce your claim</string>
    <string name="renounce_desc">That means the app will be shared freely. You can claim it again at any time.</string>
    <string name="content_cap">CONTENT</string>
    <string name="report_title">Flag as Inappropriate</string>
    <string name="report_desc">Tell Swably team if you find the app has objectionable content</string>
    <string name="report_confirm">This app will be flagged for review by the Swably team.</string>
    <string name="report_sent">Flagged, thank you</string>
    <string name="manage">Manage</string>
    <string name="edit_description">Edit Description</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="disable_downloading">Disable Downloading</string>
    <string name="enable_downloading">Enable Downloading</string>
    <string name="renounce_your_claim">Renounce Your Claim</string>
    <string name="claim_title">Claim Your App</string>
    <string name="claim_instruction">        "Once you claim the app, you can update your app's description and contact information and disable/enable the app downloading at any time.
        \nTo claim your app you must show that you have full control of the app's signature:
        \n1. Create a new Android app
        \n2. Set android:versionName=\"goofy2.swably.claim\" for &lt;manifest&gt; tag in AndroidManifest.xml
        \n3. Build it and export signed apk with the same keystore and key alias as the app you are claiming
        \n4. Install the signed apk on your phone e.g \"adb install foo.apk\", a claim screen will popup if you follow up step 2 correctly
        \n5. Follow the prompt on interface; you have only one tap left to finish the claiming"  </string>
    <string name="edit_description_hint">Write your app description here, not more than 300 characters</string>
    <string name="edit_contact_hint">Leave your Email address here</string>
    <string name="tap_to_signin">Tap to sign in</string>
    <string name="got_it">Got it</string>
    <string name="bookmark">Bookmark</string>
    <string name="search">Search</string>
    <string name="stream">Public timeline</string>
    <string name="share_title">Share to</string>
    <string name="share_link">Link</string>
    <string name="share_private">Private</string>
    <string name="share_private1">Facebook</string>
    <string name="share_private2">WhatsApp</string>
    <string name="share_private3">Gmail</string>
    <string name="share_public">Public</string>
    <string name="share_public1">Google+</string>
    <string name="share_public2">Facebook</string>
    <string name="share_public3">Twitter</string>
    <string name="menu_requests">Requests</string>
    <string name="menu_shares">Sharing</string>
    <string name="menu_notifications">Notifications</string>
    <string name="btn_download">Download</string>
    <string name="btn_upload">Upload</string>
    <string name="btn_install">Install</string>
    <string name="btn_open">Open</string>
    <string name="btn_stop">Disabled</string>
</resources>