<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/header" 
    >
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="68dp"
	    android:orientation="vertical"
	    android:gravity="center"
	    >
		<TextView android:id="@+id/txtTitle"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
			android:text="@string/share_public"
			android:textSize="24sp"
			android:textColor="@color/tab"
		    />
	</LinearLayout>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="2dp"
	    android:orientation="horizontal"
	    android:background="@color/tab"
	    />
	<LinearLayout 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    >
	    
		<Button  android:id="@+id/btnPublic1"
			android:drawableTop="@drawable/hover_share_public1"
			style="@style/inplaceBtn.shareButton"
			android:text="@string/share_public1"
		/>
		<Button  android:id="@+id/btnPublic2"
			android:drawableTop="@drawable/hover_share_public2"
			style="@style/inplaceBtn.shareButton"
			android:text="@string/share_public2"
		/>
		<Button  android:id="@+id/btnPublic3"
			android:drawableTop="@drawable/hover_share_public3"
			style="@style/inplaceBtn.shareButton"
			android:text="@string/share_public3"
		/>
				
	</LinearLayout>
</LinearLayout>
