<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent"
	>
	<ScrollView android:id="@+id/panel" 
		android:layout_width="fill_parent" 
		android:layout_height="fill_parent"
		android:fadingEdge="none"
		android:scrollbars="none"
		android:layout_weight="1"
		>
		<LinearLayout 
		    android:orientation="vertical"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:paddingBottom="10dip"
			>
			<TextView android:id="@+id/txtVersionName" 
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:drawablePadding="10dip"
				android:gravity="bottom"
				android:textSize="14sp"
				android:padding="10dip"
			/>
			<LinearLayout android:id="@+id/checking"
			    android:orientation="horizontal"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				android:padding="10dp"
				android:gravity="center_vertical"
				>
				<ProgressBar
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					style="@android:style/Widget.ProgressBar.Small"
					android:layout_marginRight="10dp"
				/>
				<TextView 
					android:text="@string/checking_update" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content"
					android:textSize="18sp" 
					>
				</TextView>
			</LinearLayout>
			<TextView android:id="@+id/txtUp2Date"
				android:text="@string/up2date" 
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:drawableLeft="@drawable/ok"
				android:drawablePadding="10dp"
				android:gravity="center_vertical"
				android:textSize="18sp"
				android:padding="10dp"
				android:visibility="gone"
			/>
			<TextView android:id="@+id/txtNotUp2Date"
				android:text="@string/not_up2date" 
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:textSize="18sp"
				android:padding="10dp"
				android:visibility="gone"
			/>
			<goofy2.utils.HeightListView android:id="@+id/listChanges"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				android:clipChildren="false"
				android:dividerHeight="1px"
				android:cacheColorHint="#00000000"
				android:scrollbars="none"
				android:headerDividersEnabled="false"
				android:footerDividersEnabled="false"
			/>
		</LinearLayout>
	</ScrollView>
	<LinearLayout 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:padding="5dip"
		>
		<Button android:id="@+id/btnUpgrade" 
			android:text="@string/upgrade"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:visibility="gone"
		/>
		<Button android:id="@+id/btnDone" 
			android:text="@string/done"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
		/>
	</LinearLayout>
</LinearLayout>